Package_Tools/cairo/package/cairo.pas


type
  Tcairo_path_data_t = record
    case longint of
      0: (header: record
          _type: Tcairo_path_data_type_t;
          length: longint;
          end);
      1: (point: record
          x: Tdouble;
          y: Tdouble;
          end);
  end;
  Pcairo_path_data_t = ^Tcairo_path_data_t;
  Pcairo_path = ^Tcairo_path;

  Tcairo_path = record
    status: Tcairo_status_t;
    Data: Pcairo_path_data_t;
    num_data: longint;
  end;
  Tcairo_path_t = Tcairo_path;
  Pcairo_path_t = ^Tcairo_path_t;

function cairo_copy_path(cr: Pcairo_t): Pcairo_path_t; cdecl; external cairo_lib;
function cairo_copy_path_flat(cr: Pcairo_t): Pcairo_path_t; cdecl; external cairo_lib;
procedure cairo_append_path(cr: Pcairo_t; path: Pcairo_path_t); cdecl; external cairo_lib;
procedure cairo_path_destroy(path: Pcairo_path_t); cdecl; external cairo_lib;
function cairo_status(cr: Pcairo_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_status_to_string(status: Tcairo_status_t): PChar; cdecl; external cairo_lib;
function cairo_device_reference(device: Pcairo_device_t): Pcairo_device_t; cdecl; external cairo_lib;

type
  Pcairo_device_type = ^Tcairo_device_type;
  Tcairo_device_type = longint;

const
  CAIRO_DEVICE_TYPE_DRM = 0;
  CAIRO_DEVICE_TYPE_GL = 1;
  CAIRO_DEVICE_TYPE_SCRIPT = 2;
  CAIRO_DEVICE_TYPE_XCB = 3;
  CAIRO_DEVICE_TYPE_XLIB = 4;
  CAIRO_DEVICE_TYPE_XML = 5;
  CAIRO_DEVICE_TYPE_COGL = 6;
  CAIRO_DEVICE_TYPE_WIN32 = 7;
  CAIRO_DEVICE_TYPE_INVALID = -(1);

type
  Tcairo_device_type_t = Tcairo_device_type;
  Pcairo_device_type_t = ^Tcairo_device_type_t;

function cairo_device_get_type(device: Pcairo_device_t): Tcairo_device_type_t; cdecl; external cairo_lib;
function cairo_device_status(device: Pcairo_device_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_device_acquire(device: Pcairo_device_t): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_device_release(device: Pcairo_device_t); cdecl; external cairo_lib;
procedure cairo_device_flush(device: Pcairo_device_t); cdecl; external cairo_lib;
procedure cairo_device_finish(device: Pcairo_device_t); cdecl; external cairo_lib;
procedure cairo_device_destroy(device: Pcairo_device_t); cdecl; external cairo_lib;
function cairo_device_get_reference_count(device: Pcairo_device_t): dword; cdecl; external cairo_lib;
function cairo_device_get_user_data(device: Pcairo_device_t; key: Pcairo_user_data_key_t): pointer; cdecl; external cairo_lib;
function cairo_device_set_user_data(device: Pcairo_device_t; key: Pcairo_user_data_key_t; user_data: pointer; Destroy: Tcairo_destroy_func_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_create_similar(other: Pcairo_surface_t; content: Tcairo_content_t; Width: longint; Height: longint): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_surface_create_similar_image(other: Pcairo_surface_t; format: Tcairo_format_t; Width: longint; Height: longint): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_surface_map_to_image(surface: Pcairo_surface_t; extents: Pcairo_rectangle_int_t): Pcairo_surface_t; cdecl; external cairo_lib;
procedure cairo_surface_unmap_image(surface: Pcairo_surface_t; image: Pcairo_surface_t); cdecl; external cairo_lib;
function cairo_surface_create_for_rectangle(target: Pcairo_surface_t; x: Tdouble; y: Tdouble; Width: Tdouble; Height: Tdouble): Pcairo_surface_t; cdecl; external cairo_lib;

type
  Pcairo_surface_observer_mode_t = ^Tcairo_surface_observer_mode_t;
  Tcairo_surface_observer_mode_t = longint;

const
  CAIRO_SURFACE_OBSERVER_NORMAL = 0;
  CAIRO_SURFACE_OBSERVER_RECORD_OPERATIONS = $1;

function cairo_surface_create_observer(target: Pcairo_surface_t; mode: Tcairo_surface_observer_mode_t): Pcairo_surface_t; cdecl; external cairo_lib;

type
  Tcairo_surface_observer_callback_t = procedure(observer: Pcairo_surface_t; target: Pcairo_surface_t; Data: pointer); cdecl;

function cairo_surface_observer_add_paint_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_mask_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_fill_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_stroke_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_glyphs_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_flush_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_add_finish_callback(abstract_surface: Pcairo_surface_t; func: Tcairo_surface_observer_callback_t; Data: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_print(abstract_surface: Pcairo_surface_t; write_func: Tcairo_write_func_t; closure: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_observer_elapsed(abstract_surface: Pcairo_surface_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_print(abstract_device: Pcairo_device_t; write_func: Tcairo_write_func_t; closure: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_device_observer_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_paint_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_mask_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_fill_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_stroke_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_device_observer_glyphs_elapsed(abstract_device: Pcairo_device_t): Tdouble; cdecl; external cairo_lib;
function cairo_surface_reference(surface: Pcairo_surface_t): Pcairo_surface_t; cdecl; external cairo_lib;
procedure cairo_surface_finish(surface: Pcairo_surface_t); cdecl; external cairo_lib;
procedure cairo_surface_destroy(surface: Pcairo_surface_t); cdecl; external cairo_lib;
function cairo_surface_get_device(surface: Pcairo_surface_t): Pcairo_device_t; cdecl; external cairo_lib;
function cairo_surface_get_reference_count(surface: Pcairo_surface_t): dword; cdecl; external cairo_lib;
function cairo_surface_status(surface: Pcairo_surface_t): Tcairo_status_t; cdecl; external cairo_lib;

type
  Pcairo_surface_type = ^Tcairo_surface_type;
  Tcairo_surface_type = longint;

const
  CAIRO_SURFACE_TYPE_IMAGE = 0;
  CAIRO_SURFACE_TYPE_PDF = 1;
  CAIRO_SURFACE_TYPE_PS = 2;
  CAIRO_SURFACE_TYPE_XLIB = 3;
  CAIRO_SURFACE_TYPE_XCB = 4;
  CAIRO_SURFACE_TYPE_GLITZ = 5;
  CAIRO_SURFACE_TYPE_QUARTZ = 6;
  CAIRO_SURFACE_TYPE_WIN32 = 7;
  CAIRO_SURFACE_TYPE_BEOS = 8;
  CAIRO_SURFACE_TYPE_DIRECTFB = 9;
  CAIRO_SURFACE_TYPE_SVG = 10;
  CAIRO_SURFACE_TYPE_OS2 = 11;
  CAIRO_SURFACE_TYPE_WIN32_PRINTING = 12;
  CAIRO_SURFACE_TYPE_QUARTZ_IMAGE = 13;
  CAIRO_SURFACE_TYPE_SCRIPT = 14;
  CAIRO_SURFACE_TYPE_QT = 15;
  CAIRO_SURFACE_TYPE_RECORDING = 16;
  CAIRO_SURFACE_TYPE_VG = 17;
  CAIRO_SURFACE_TYPE_GL = 18;
  CAIRO_SURFACE_TYPE_DRM = 19;
  CAIRO_SURFACE_TYPE_TEE = 20;
  CAIRO_SURFACE_TYPE_XML = 21;
  CAIRO_SURFACE_TYPE_SKIA = 22;
  CAIRO_SURFACE_TYPE_SUBSURFACE = 23;
  CAIRO_SURFACE_TYPE_COGL = 24;

type
  Tcairo_surface_type_t = Tcairo_surface_type;
  Pcairo_surface_type_t = ^Tcairo_surface_type_t;

function cairo_surface_get_type(surface: Pcairo_surface_t): Tcairo_surface_type_t; cdecl; external cairo_lib;
function cairo_surface_get_content(surface: Pcairo_surface_t): Tcairo_content_t; cdecl; external cairo_lib;
function cairo_surface_write_to_png(surface: Pcairo_surface_t; filename: PChar): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_write_to_png_stream(surface: Pcairo_surface_t; write_func: Tcairo_write_func_t; closure: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_get_user_data(surface: Pcairo_surface_t; key: Pcairo_user_data_key_t): pointer; cdecl; external cairo_lib;
function cairo_surface_set_user_data(surface: Pcairo_surface_t; key: Pcairo_user_data_key_t; user_data: pointer; Destroy: Tcairo_destroy_func_t): Tcairo_status_t; cdecl; external cairo_lib;

const
  CAIRO_MIME_TYPE_JPEG = 'image/jpeg';
  CAIRO_MIME_TYPE_PNG = 'image/png';
  CAIRO_MIME_TYPE_JP2 = 'image/jp2';
  CAIRO_MIME_TYPE_URI = 'text/x-uri';
  CAIRO_MIME_TYPE_UNIQUE_ID = 'application/x-cairo.uuid';
  CAIRO_MIME_TYPE_JBIG2 = 'application/x-cairo.jbig2';
  CAIRO_MIME_TYPE_JBIG2_GLOBAL = 'application/x-cairo.jbig2-global';
  CAIRO_MIME_TYPE_JBIG2_GLOBAL_ID = 'application/x-cairo.jbig2-global-id';
  CAIRO_MIME_TYPE_CCITT_FAX = 'image/g3fax';
  CAIRO_MIME_TYPE_CCITT_FAX_PARAMS = 'application/x-cairo.ccitt.params';
  CAIRO_MIME_TYPE_EPS = 'application/postscript';
  CAIRO_MIME_TYPE_EPS_PARAMS = 'application/x-cairo.eps.params';
